--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,13 @@
   }
 }
 
+@layer components {
+  .photo-album-wrapper img {
+    max-width: 100% !important;
+    vertical-align: middle !important;
+  }
+}
+
 body {
   @apply bg-center bg-cover;
   background-image:url('./img/bg.jpg');
